--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,3 +11,36 @@ body {
 main {
     flex: 1 0 auto;
 }
+
+.loader {
+    border: 16px solid #f3f3f3;
+    /* Light grey */
+    border-top: 16px solid #f25604;
+    /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.table tbody>tr>td.vert-align {
+    vertical-align: middle;
+}
+
+.visible {
+    visibility: visible!important;
+}
+
+.oculto {
+    visibility: hidden;
+    margin-bottom: 0 !important;
+}
