--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,19 +1,31 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
-  padding-top: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    padding-top: 60px;
 }
-@media (max-width: 979px) {
-  body {
-    padding-top: 0px;
-  }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
 }
+
 .nav.nav-center {
     display: inline-block;
     left: 0;
     right: 0;
-    margin:0;
-    float:none;
+    margin: 0;
+    float: none;
 }
 
-.navbar-inner{
-    text-align:center;
+.navbar-inner {
+    text-align: center;
 }
