--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,10 +2,39 @@
     box-sizing: border-box;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    padding-top: 60px;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+}
+
+.nav.nav-center {
+    display: inline-block;
+    left: 0;
+    right: 0;
+    margin: 0;
+    float: none;
+}
+
+.navbar-inner {
+    text-align: center;
 }
 
 main {
